Getting back into it..

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,9 @@
 <!doctype html>
-
 <html class="no-js" lang="en">
 
 <head>
-
-
-	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-	{{ site.data.settings.basic_settings.site_title }}
-
-	Journal Theme by https://jekyllthemes.io
-	Premium + free Jekyll themes for your blog or website.
-
-	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141805286-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-141805286-1');
-	</script>
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="{{ site.data.settings.basic_settings.favicon_image }}">
@@ -77,19 +51,14 @@
 	{% if site.data.settings.advanced_settings.custom_styles %}
 	<!-- Custom Styles -->
 	<style>
-		{
+		/* {
 				{
-				site.data.settings.advanced_settings.custom_styles
+				site.data.settings.advanced_settings.custom_styles = "";
 			}
-		}
+		} */
 	</style>
 	{% endif %}
-
-	{% if site.data.settings.advanced_settings.analytics_code %}
-	<!-- Analytics Code -->
-	{{ site.data.settings.advanced_settings.analytics_code }}
-	{% endif %}
-
+	
 	{% if site.data.settings.advanced_settings.header_js %}
 	<!-- Extra Header JS Code -->
 	{{ site.data.settings.advanced_settings.header_js }}
@@ -97,13 +66,10 @@
 
 </head>
 
-
 <body class="loading{% if site.data.settings.advanced_settings.ajax_loading == true %} ajax-loading{% endif %}"
 	data-site-url="{{ site.url }}" data-page-url="{{ page.url | replace: 'index.html', '' }}">
 
-
 	{% include header.html %}
-
 
 	<div class="loader"><svg width="120" height="30" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="15" cy="15" r="15">
@@ -124,26 +90,19 @@
 				<animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1"
 					calcMode="linear" repeatCount="indefinite" />
 			</circle>
-		</svg></div>
+		</svg>
+	</div>
 
 	<div class="page-loader"></div>
-
-
 	<div class="page">
-
 		<div class="page__content"
 			data-page-title="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}"
 			data-image="{{ page.featured_image }}">
-
 			{{ content }}
-
 		</div>
-
 	</div>
 
-
 	{% include footer.html %}
-
 
 	<!-- Javascript Assets -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -153,8 +112,6 @@
 	<!-- Extra Footer JS Code -->
 	{{ site.data.settings.advanced_settings.footer_js }}
 	{% endif %}
-
-
 </body>
 
 </html>
