New blank slate

--- a/_includes/analytics-code.html
+++ b/_includes/analytics-code.html
@@ -1,12 +1,1 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141805286-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-141805286-1');
-</script>
+<script defer data-domain="justinellery.dev" src="https://plausible.io/js/script.js"></script>
